--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "node book shop site",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
